[workspace]
members = ["core", "worker"]
default-members = [".", "core"]

[package]
name = "turbo-m"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
# Core library (shared models + FSRS engine)
turbo-m-core = { path = "core", features = ["sqlite"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# HTTP client for remote backend
ureq = { version = "3", features = ["json"] }

# Readline for drill TUI
rustyline = "17"

# Unicode normalization for drill
unicode-normalization = "0.1"

# Shuffle for drill
rand = "0.9"

# Terminal manipulation for drill deck picker
crossterm = "0.28"

[[bin]]
name = "turbo-m"
path = "src/main.rs"


