cabal-version:   3.4
name:            turbo-m
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  TurboM
  build-depends:    base ^>=4.21.0.0
  hs-source-dirs:   lib
  default-language: GHC2024

executable turbo-m
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.21.0.0
    , haskeline
    , random-shuffle
    , split
    , turbo-m

  hs-source-dirs:   app

  -- Base language which the package is written in.
  default-language: GHC2024

test-suite turbo-m-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base     ^>=4.21.0.0
    , turbo-m
