cabal-version:   3.4
name:            turbo-m
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    TurboM.Database
    TurboM.FSRS
    TurboM.Types

  build-depends:
    , base           ^>=4.21.0.0
    , bytestring
    , directory
    , filepath
    , process
    , sqlite-simple
    , time

  hs-source-dirs:   src/
  default-language: GHC2024

executable turbo-m
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.21.0.0
    , directory
    , filepath
    , haskeline
    , optparse-applicative
    , process
    , random-shuffle
    , split
    , sqlite-simple
    , time
    , turbo-m

  hs-source-dirs:   app

  -- Base language which the package is written in.
  default-language: GHC2024

test-suite turbo-m-test
  import:           warnings
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base     ^>=4.21.0.0
    , turbo-m
