cabal-version:      3.14
name:               turbo-m
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             unorsk
maintainer:         25188+unorsk@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable turbo-m
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: GHC2024
