[package]
name = "turbo-m-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
rs-fsrs = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
