[package]
name = "turbo-m-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
turbo-m-core = { path = "../core" }
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
